[tool.poetry]
name = "dropbox-paper-importer"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
cson = "^0.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
